--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,9 @@ body {
     border: 1px solid;
   }
 }
+
+.mat-mdc-card-header {
+  padding: 16px 0 !important;
+  margin: 0 auto;
+  background-color: red;
+}
